# BidMatrix

./: .dockerignore  .editorconfig  .env.example  .gitignore  BIDMATRIX_AI_COMPANY_MASTER_PLAN.md  BidMatrix.slnx  Directory.Build.props  README.md  compose.yaml  package.json
.github/: dependabot.yml
.github/workflows/: f0-quality.yml
apps/web/: Dockerfile  README.md  package-lock.json  package.json  vitest.config.mts
docs/: FOUNDATION_PLAN.md  implementation-status.md
docs/adr/: 0001-hybrid-stack.md  0002-modular-monolith-and-separate-agent-worker.md  0003-temporal-for-durable-workflows.md  0004-tool-gateway-as-only-side-effect-boundary.md  0005-draft-only-external-autonomy.md  0006-postgresql-tenant-isolation.md  (+3 more)
scripts/: verify-f0.ps1  verify-f1.ps1
src/agents/: README.md  pyproject.toml
src/agents/bidmatrix_agents/: __init__.py  event_bridge.py  health.py  internal_api.py  schedules.py  settings.py  worker.py
src/agents/bidmatrix_agents/activities/: __init__.py  agent_task.py  analysis_intake.py  approval.py
src/agents/bidmatrix_agents/agent_runtime/: __init__.py  adapters.py  contracts.py  fake_agents.py
src/agents/bidmatrix_agents/prompts/engineering/: v1.md
src/agents/bidmatrix_agents/prompts/executive/: v1.md
src/agents/bidmatrix_agents/prompts/product_analyst/: v1.md
src/agents/bidmatrix_agents/prompts/support/: v1.md
src/agents/bidmatrix_agents/workflows/: __init__.py  agent_tasks.py  analysis_intake.py  approval.py  models.py
src/agents/tests/: test_agent_runtime.py  test_health.py  test_internal_api_events.py
(+168 files in other folders)
