[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "bidmatrix-agents"
version = "0.1.0"
description = "BidMatrix agent and Temporal worker foundation."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "httpx==0.28.1",
  "openai-agents==0.18.3",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "temporalio==1.30.0",
]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["bidmatrix_agents"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["bidmatrix_agents"]

[tool.uv]
package = true
